<resources>
    <string name="app_name">Shopping Helper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item">Item</string>
    <string name="title_activity_item_search">Item Search</string>

    <string name="label_item_brand">Brand</string>
    <string name="label_item_product">Product</string>
    <string name="label_item_unit">Unit</string>
    <string name="label_item_unit_price">Unit Price</string>
    <string name="label_item_package">Package</string>
    <string name="label_item_package_size">Package Size</string>
    <string name="label_item_price">Price</string>
    <string name="label_item_total_price">Total Price</string>
    <string name="label_item_store">Store</string>
    <string name="label_item_upc">UPC</string>

    <string name="button_upc_scan">Scan</string>
    <string name="button_search">Search</string>

    <string name="msg_not_available">Not Available</string>
    <string name="msg_select_unit">Select Unit</string>

    <string-array name="package_size_units">
        <item>Count</item>
        <item>Gal</item>
        <item>fl oz</item>
        <item>lb</item>
        <item>oz</item>
    </string-array>

    <string-array name="price_units">
        <item>USD</item>
        <item>CAD</item>
    </string-array>



</resources>
